# anarchy_20260221

./: .gitattributes  .gitignore  CLAUDE.md  README.md  compare_utilities.py  draft.md  postprocess_neural.py  postprocess_tree.py  pyproject.toml  temp.md  tmp
.claude/: settings.local.json
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
cb/: config.py  model.py  train.py
cnn/: config.py  config_gas.py  model.py  train.py  train_gas.py
dart/: config.py  model.py  train.py
data/: building_metadata.csv  cleaned_cooling.csv  cleaned_electricity.csv  cleaned_gas.csv  cleaned_heat.csv  cleaned_steam.csv  cleaned_steamrate.csv  meter-data-oct-2025.csv  meter-data-sept-2025.csv  tree_features_cooling.parquet  tree_features_electricity.parquet  tree_features_gas.parquet  tree_features_gas_cross.parquet  tree_features_heat.parquet  tree_features_manifest.json  tree_features_steam.parquet  weather-sept-oct-2025.csv
doc/: CNN_MODEL.md  ISSUES.md  PROJECT_REPORT.md  XGB_MODEL.md  building_linkage_report.md  data-dictionary.md  data_integrity_report.md  methodology.md
extratrees/: config.py  model.py  train.py
lgbm/: config.py  model.py  train.py
lstm/: config.py  model.py  train.py
ngb/: config.py  model.py  train.py
nn_gas/: experiment.py  lstm_gas.py  seq_experiment.py
qrf/: config.py  model.py  train.py
rf/: config.py  model.py  train.py
src/: __init__.py  config.py  data_cleaner.py  data_loader.py  evidence_cards.py  explainer.py  model.py  prepare_gas_features.py  prepare_tree_features.py  scoring.py  (+1 more)
(+388 files in other folders)
